# sharp

./: .gitignore  CMakeLists.txt  README.md
demo/: demo_sharpgs.cpp
examples/: demo.cpp  range_proof_demo.cpp  sharpgs_example.cpp
include/: commitment.h  commitments.h  groups.h  masking.h  mped.h  ntt.h  pedersen.h  polynomial.h  sharp_gs.h  sharpgs.h  three_squares.h  threesquares.h  utils.h
scripts/: three_squares.gp
src/: commitment.cpp  commitments.cpp  groups.cpp  masking.cpp  mped.cpp  ntt.cpp  pedersen.cpp  polynomial.cpp  sharp_gs.cpp  sharpgs.cpp  temp_input.gp  temp_output.txt  three_squares.cpp  threesquares.cpp  threesquares.gp  threesquares_solver  threesquares_solver.cpp  utils.cpp
tests/: benchmark_sharp_gs.cpp  test_masking.cpp  test_mped.cpp  test_sharp_gs.cpp  test_sharpgs.cpp  test_suite.cpp  test_threesquares.cpp
